Java changed to version 8